--- a/red-social-wed/client/index.html
+++ b/red-social-wed/client/index.html
@@ -21,7 +21,6 @@
                     </div>
                     <div>
                         <h1 class="h2 mb-0 text-primary fw-bold">Red Social Pascualina</h1>
-                        <p class="mb-0 text-secondary">Conectando Estudiantes Universitarios</p>
                     </div>
                 </div>
             </div>
@@ -36,18 +35,11 @@
                         <div class="form-header">
                             <h2 class="mb-3">
                                 <i class="fas fa-user-graduate me-2"></i>
-                                Registro de Estudiante
+                                Registro
                             </h2>
                             <p class="mb-0">Únete a nuestra comunidad estudiantil digital</p>
                         </div>
 
-                        <!-- Progress Bar -->
-                        <div class="px-4 pt-3">
-                            <div class="progress" style="height: 8px;">
-                                <div class="progress-bar" id="progressBar" style="width: 0%"></div>
-                            </div>
-                            <small class="text-muted">Progreso del formulario: <span id="progressText">0%</span></small>
-                        </div>
 
                         <!-- Form Content -->
                         <div class="form-section">
@@ -55,7 +47,7 @@
                                 <!-- Datos del Estudiante -->
                                 <div class="section-title">
                                     <i class="fas fa-user-graduate text-primary"></i>
-                                    <h4>Datos del Estudiante</h4>
+                                    <h4>Datos Usuario</h4>
                                 </div>
 
                                 <div class="row">
@@ -84,18 +76,6 @@
                                             </label>
                                         </div>
                                     </div>
-                                    <div class="col-md-4">
-                                        <div class="form-floating">
-                                            <input type="text" class="form-control" id="studentId" name="studentId" placeholder="Código estudiantil" required>
-                                            <label for="studentId">
-                                                <i class="fas fa-id-badge me-2"></i>Código Estudiantil
-                                            </label>
-                                            <div class="invalid-feedback">
-                                                Por favor ingrese su código estudiantil.
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
 
                                 <div class="row">
                                     <div class="col-md-6">
