--- a/red-social-wed/client/index.html
+++ b/red-social-wed/client/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/REGISTRO.CSS">
+    <script src="/red-social-wed/client/js/main.js"></script>
     
     </head>
 <body>
